--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">bezKoder</a>
+    <a href="#" class="navbar-brand">Administracion</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
         <a href="/home" class="nav-link" routerLink="home">Home </a>
@@ -20,9 +20,22 @@
           <a href="/user" class="nav-link" routerLink="user">User</a>
         </li>
       }
+
+
+      @if (isLoggedIn) {
+        <li class="nav-item">
+          <a  class="nav-link" routerLink="root">Root</a>
+        </li>
+      }
+
+
+
     </ul>
 
-    @if (!isLoggedIn) {
+
+
+
+      @if (!isLoggedIn) {
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
@@ -31,6 +44,9 @@
           <a href="/login" class="nav-link" routerLink="login">Login</a>
         </li>
       </ul>
+
+
+
     } @else {
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -40,6 +56,12 @@
           <a href class="nav-link" (click)="logout()">LogOut</a>
         </li>
       </ul>
+
+
+
+
+
+
     }
   </nav>
 
