--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <header class="jumbotron">
-    <p>{{ content }}</p>
+    <h1>Home</h1>
+    <p></p>
+    <app-list-management (selectedMgm)="onSelectMgn($event)" ></app-list-management>
+    <p>FIN</p>
   </header>
 </div>
