--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,14 @@
         </li>
       }
 
+      @if (isLoggedIn) {
+        <li class="nav-item">
+          <a href="/admin" class="nav-link" routerLink="admin">Admin</a>
+        </li>
+      }
+
+
+
 
       @if (isLoggedIn) {
         <li class="nav-item">
@@ -65,7 +73,7 @@
     }
   </nav>
 
-  <div class="container">
+  <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
 </div>
